# sakk

./: .gitignore  CMakeLists.txt  app.cpp  app.hpp  colors.hpp  main.cpp  sakk  sakktabla.cpp  sakktabla.hpp
Figures/: figure.cpp  figure.hpp  king.cpp
Widgets/: figure.cpp  figure.hpp  king.cpp  king.hpp
widgets/: choicewidget.cpp  choicewidget.hpp  dropdownwidget.cpp  dropdownwidget.hpp  numberwidget.cpp  numberwidget.hpp  widgets.cpp  widgets.hpp
